--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.1.10",
+    "@mui/material": "^6.3.1",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "modern-normalize": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^7.0.2",
+    "react-spinners": "^0.15.0",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
@@ -23,6 +31,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "@vitejs/plugin-react-swc": "^3.7.2",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
